--- a/wiki/Sketcher_Dimension.html
+++ b/wiki/Sketcher_Dimension.html
@@ -82,7 +82,7 @@
 <li>This tool always runs in continue mode: optionally keep creating constraints.</li></ol></li>
 <li>To finish, right-click or press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, or start another geometry or constraint creation tool.</li></ul></li></ol>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
-<ul><li><span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal dimensions</a> and <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> have a distinct behavior compared to <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a>. The first two dimension types also constrain the relative positions of the measured points so that they won't <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">switch places</a>. For example, for a horizontal dimension the left point will always remain the left point. This is not the case for distance dimensions. When using this tool to apply a dimensional constraint to points with the same X- or Y-coordinate you need to take care when picking the point to position it. You can verify which dimension type will be created by checking the last item in the <a href="Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Constraints section of the Sketcher Dialog</a>, this will dynamically update as you move the mouse.</li></ul>
+<ul><li><span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal dimensions</a> and <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> have a distinct behavior compared to <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a>. The first two dimension types have signed dimension values, they also constrain the relative positions of the measured points. These will only <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">switch places</a> if the sign of the dimension value is changed. For example, if the value of a horizontal dimension remains positive, or negative, the left point will always remain the left point. This is not the case for the distance dimension type, which has an unsigned value. When using this tool to apply a dimensional constraint to points with the same X- or Y-coordinate, you need to take care when picking the point to position it. You can verify which dimension type will be created by checking the last item in the <a href="Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Constraints section of the Sketcher Dialog</a>, this will dynamically update as you move the mouse.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -128,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121160411
+Cached time: 20260125101028
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.121 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.122 seconds
 Preprocessor visited node count: 424/1000000
 Post&#8208;expand include size: 24388/2097152 bytes
 Template argument size: 9595/2097152 bytes
@@ -144,19 +144,19 @@ Unstrip post&#8208;expand size: 1714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.245      1 -total
- 31.46%    5.425      1 Template:Sketcher_Tools_navi
- 25.46%    4.391      2 Template:Navigation_menu_2
- 15.94%    2.748      1 Template:GuiCommand
- 13.32%    2.297      1 Template:Userdocnavi
- 12.80%    2.208      2 Template:Value
- 10.13%    1.747      2 Template:Docnav
-  6.87%    1.185      2 Template:Incode
-  5.61%    0.967      4 Template:KEY
-  5.56%    0.959      1 Template:Button
+100.00%   15.724      1 -total
+ 27.82%    4.375      1 Template:Sketcher_Tools_navi
+ 25.87%    4.068      2 Template:Navigation_menu_2
+ 17.10%    2.689      1 Template:GuiCommand
+ 15.38%    2.418      2 Template:Value
+ 13.07%    2.055      1 Template:Userdocnavi
+ 10.35%    1.627      2 Template:Docnav
+  6.56%    1.032      2 Template:Incode
+  6.31%    0.992      4 Template:KEY
+  5.75%    0.904      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331921-0!canonical and timestamp 20260121160411 and revision id 1741930. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331921-0!canonical and timestamp 20260125101042 and revision id 1743554. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
