--- a/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
@@ -51,11 +51,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
 <p>L'outil <b>TechDraw Cotes verticales</b> cr&eacute;e une cha&icirc;ne verticale de cotes&nbsp;: une s&eacute;quence de cotes align&eacute;es.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimensionExample.png&amp;filetimestamp=20211113142932&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimensionExample.png" decoding="async" width="300" height="214" class="mw-file-element" data-file-width="619" data-file-height="441"></a></span>
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimensionExample.png&amp;filetimestamp=20211113142932&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimensionExample.png" decoding="async" width="300" height="214" class="mw-file-element" data-file-width="619" data-file-height="441"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
@@ -117,13 +114,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125100922
+Cached time: 20260125101057
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.140 seconds
-Preprocessor visited node count: 380/1000000
+CPU time usage: 0.072 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 379/1000000
 Post&#8208;expand include size: 26929/2097152 bytes
 Template argument size: 10716/2097152 bytes
 Highest expansion depth: 6/100
@@ -133,19 +130,19 @@ Unstrip post&#8208;expand size: 1395/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.233      1 -total
- 19.14%    8.082      1 Template:TechDraw_Tools_navi/fr
- 13.18%    5.564      2 Template:Navigation_menu_2
- 12.82%    5.414      1 Template:Value
- 10.34%    4.368      2 Template:Docnav/fr
-  9.74%    4.112      1 Template:Userdocnavi/fr
-  8.83%    3.731      3 Template:MenuCommand
-  8.67%    3.660      1 Template:Version/fr
-  8.65%    3.653      1 Template:GuiCommand/fr
-  7.05%    2.978      1 Template:VersionMinus/fr
+100.00%   28.517      1 -total
+ 21.47%    6.123      1 Template:TechDraw_Tools_navi/fr
+ 14.60%    4.164      2 Template:Navigation_menu_2
+ 11.75%    3.352      1 Template:Caption
+ 10.27%    2.929      1 Template:Value
+  9.29%    2.649      2 Template:Docnav/fr
+  9.00%    2.566      1 Template:Userdocnavi/fr
+  8.92%    2.543      1 Template:GuiCommand/fr
+  8.90%    2.537      1 Template:Version/fr
+  5.90%    1.682      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125100922 and revision id 1743553. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125101057 and revision id 1743556. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
