--- a/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
@@ -54,7 +54,7 @@
 <p>L'outil <b>TechDraw Cotes verticales</b> cr&eacute;e une cha&icirc;ne verticale de cotes&nbsp;: une s&eacute;quence de cotes align&eacute;es.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimensionExample.png&amp;filetimestamp=20211113142932&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimensionExample.png" decoding="async" width="300" height="214" class="mw-file-element" data-file-width="619" data-file-height="441"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes cr&eacute;&eacute;es</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125101057
+Cached time: 20260125101116
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.116 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.118 seconds
 Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 26929/2097152 bytes
-Template argument size: 10716/2097152 bytes
+Post&#8208;expand include size: 26931/2097152 bytes
+Template argument size: 10717/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 1395/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.517      1 -total
- 21.47%    6.123      1 Template:TechDraw_Tools_navi/fr
- 14.60%    4.164      2 Template:Navigation_menu_2
- 11.75%    3.352      1 Template:Caption
- 10.27%    2.929      1 Template:Value
-  9.29%    2.649      2 Template:Docnav/fr
-  9.00%    2.566      1 Template:Userdocnavi/fr
-  8.92%    2.543      1 Template:GuiCommand/fr
-  8.90%    2.537      1 Template:Version/fr
-  5.90%    1.682      1 Template:VersionMinus/fr
+100.00%   29.490      1 -total
+ 27.97%    8.249      1 Template:TechDraw_Tools_navi/fr
+ 22.43%    6.614      2 Template:Navigation_menu_2
+ 12.61%    3.718      1 Template:Userdocnavi/fr
+ 11.42%    3.368      1 Template:Value
+  8.60%    2.535      2 Template:Docnav/fr
+  7.76%    2.288      1 Template:GuiCommand/fr
+  7.18%    2.117      1 Template:Incode
+  6.51%    1.920      1 Template:VersionMinus/fr
+  5.62%    1.656      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125101057 and revision id 1743556. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125101116 and revision id 1743558. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
